# kafka_example

./: Cargo.toml  README.md  build.rs
src/: consumer.rs  expression.rs  producer.rs  utils.rs
