[package]
name    = "kafka-example"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[dependencies]
futures = "0.1"
tokio   = "0.1.21"
clap    = "2.33.0"
rdkafka = { version = "0.22.0", features = [ "ssl", "sasl" ] }
rdkafka-sys = "=1.2.2"

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"