[package]
name    = "kafka-example"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[dependencies]
futures = "0.1"
tokio   = "0.1.21"
clap    = "2.33.0"
rdkafka = { version = "0.22.0", features = [ "ssl", "sasl" ] }
rdkafka-sys = "=1.2.2"
serde_json = "1.0.87"
log = "0.4"
pretty_env_logger = "0.4"
sqlparser = { version = "0.26.0", features = ["serde_json", "serde"] }

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"
